# ocs2_ros2

./: README.md
.github/workflows/: sync.yml
ocs2_core/: CMakeLists.txt  package.xml
ocs2_core/src/control/: FeedforwardController.cpp  LinearController.cpp
ocs2_core/src/cost/: QuadraticStateCost.cpp  QuadraticStateInputCost.cpp
ocs2_core/src/penalties/: MultidimensionalPenalty.cpp
ocs2_core/src/reference/: TargetTrajectories.cpp
ocs2_ddp/: CMakeLists.txt  package.xml
ocs2_ddp/src/: GaussNewtonDDP.cpp
ocs2_mpc/: package.xml
ocs2_mpc/src/: MPC_BASE.cpp  MPC_MRT_Interface.cpp
ocs2_oc/: CMakeLists.txt  package.xml
ocs2_oc/include/ocs2_oc/oc_solver/: SolverBase.h
ocs2_oc/include/ocs2_oc/synchronized_module/: LoopshapingReferenceManager.h  ReferenceManager.h  ReferenceManagerDecorator.h  ReferenceManagerInterface.h
ocs2_oc/src/oc_solver/: SolverBase.cpp
ocs2_oc/src/synchronized_module/: LoopshapingReferenceManager.cpp  ReferenceManager.cpp
ocs2_pinocchio/ocs2_centroidal_model/: CMakeLists.txt
ocs2_pinocchio/ocs2_pinocchio_interface/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_self_collision/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_ballbot/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_ballbot_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_ballbot_ros/include/ocs2_ballbot_ros/: BallbotDummyVisualization.h
ocs2_robotic_examples/ocs2_ballbot_ros/launch/: ballbot.launch.py  visualize.launch.py
ocs2_robotic_examples/ocs2_ballbot_ros/rviz/: ballbot.rviz
ocs2_robotic_examples/ocs2_ballbot_ros/src/: BallbotDdpMpcNode.cpp  BallbotDummyVisualization.cpp  BallbotMpcMrtNode.cpp  BallbotSlpMpcNode.cpp  BallbotTargetPoseCommand.cpp  DummyBallbotNode.cpp
ocs2_robotic_examples/ocs2_ballbot_ros/urdf/: ballbot.urdf
ocs2_robotic_examples/ocs2_double_integrator/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_double_integrator/config/mpc/: task.info
ocs2_robotic_examples/ocs2_double_integrator/include/ocs2_double_integrator/: DoubleIntegratorInterface.h
ocs2_robotic_examples/ocs2_double_integrator/src/: DoubleIntegratorInterface.cpp
ocs2_robotic_examples/ocs2_double_integrator_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_double_integrator_ros/include/ocs2_double_integrator_ros/: DoubleIntegratorDummyVisualization.h
ocs2_robotic_examples/ocs2_double_integrator_ros/launch/: double_integrator.launch.py  visualize.launch.py
ocs2_robotic_examples/ocs2_double_integrator_ros/rviz/: double_integrator.rviz
ocs2_robotic_examples/ocs2_double_integrator_ros/src/: DoubleIntegratorDummyVisualization.cpp  DoubleIntegratorMpcNode.cpp  DoubleIntegratorTargetPoseCommand.cpp  DummyDoubleIntegratorNode.cpp
ocs2_robotic_examples/ocs2_double_integrator_ros/urdf/: double_integrator.urdf
ocs2_robotic_examples/ocs2_legged_robot/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_legged_robot_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_legged_robot_ros/include/ocs2_legged_robot_ros/gait/: GaitKeyboardPublisher.h  GaitReceiver.h  ModeSequenceTemplateRos.h
ocs2_robotic_examples/ocs2_legged_robot_ros/include/ocs2_legged_robot_ros/visualization/: LeggedRobotVisualizer.h
ocs2_robotic_examples/ocs2_legged_robot_ros/launch/: anymal.launch.py  visualize.launch.py
ocs2_robotic_examples/ocs2_legged_robot_ros/rviz/: legged_robot.rviz
ocs2_robotic_examples/ocs2_legged_robot_ros/src/: LeggedRobotDdpMpcNode.cpp  LeggedRobotDummyNode.cpp  LeggedRobotGaitCommandNode.cpp  LeggedRobotPoseCommandNode.cpp  LeggedRobotSqpMpcNode.cpp
ocs2_robotic_examples/ocs2_legged_robot_ros/src/gait/: GaitKeyboardPublisher.cpp  GaitReceiver.cpp
ocs2_robotic_examples/ocs2_legged_robot_ros/src/visualization/: LeggedRobotVisualizer.cpp
ocs2_robotic_examples/ocs2_legged_robot_ros/urdf/urdf/: anymal.urdf
ocs2_robotic_tools/: CMakeLists.txt  package.xml
ocs2_ros2_interfaces/: CMakeLists.txt  package.xml
ocs2_ros2_interfaces/include/ocs2_ros2_interfaces/command/: TargetTrajectoriesInteractiveMarker.h  TargetTrajectoriesKeyboardPublisher.h  TargetTrajectoriesRosPublisher.h
ocs2_ros2_interfaces/include/ocs2_ros2_interfaces/common/: RosMsgConversions.h  RosMsgHelpers.h
ocs2_ros2_interfaces/include/ocs2_ros2_interfaces/mpc/: MPC_ROS_Interface.h
ocs2_ros2_interfaces/include/ocs2_ros2_interfaces/mrt/: LoopshapingDummyObserver.h  MRT_ROS_Dummy_Loop.h  MRT_ROS_Interface.h
ocs2_ros2_interfaces/include/ocs2_ros2_interfaces/synchronized_module/: RosReferenceManager.h
ocs2_ros2_interfaces/include/ocs2_ros2_interfaces/visualization/: VisualizationHelpers.h
ocs2_ros2_interfaces/multiplot/: performance_indices.xml
ocs2_ros2_interfaces/src/: lintTarget.cpp
ocs2_ros2_interfaces/src/command/: TargetTrajectoriesInteractiveMarker.cpp  TargetTrajectoriesKeyboardPublisher.cpp  TargetTrajectoriesRosPublisher.cpp
ocs2_ros2_interfaces/src/common/: RosMsgConversions.cpp  RosMsgHelpers.cpp
ocs2_ros2_interfaces/src/mpc/: MPC_ROS_Interface.cpp
ocs2_ros2_interfaces/src/mrt/: LoopshapingDummyObserver.cpp  MRT_ROS_Dummy_Loop.cpp  MRT_ROS_Interface.cpp
ocs2_ros2_interfaces/src/multiplot/: MultiplotRemap.cpp
ocs2_ros2_interfaces/src/synchronized_module/: RosReferenceManager.cpp
ocs2_ros2_interfaces/src/visualization/: VisualizationColors.cpp  VisualizationHelpers.cpp
ocs2_ros2_msgs/: CMakeLists.txt  package.xml
ocs2_ros2_msgs/msg/: Benchmarks.idl  BezierSegment.idl  BezierTrajectory.idl  Constraint.idl  ControllerData.idl  Gains.idl  IndividualBenchmarks.idl  IndividualGains.idl  LagrangianMetrics.idl  ModeSchedule.idl  MpcFlattenedController.idl  MpcInput.idl  MpcObservation.idl  MpcPerformanceIndices.idl  MpcState.idl  MpcTargetTrajectories.idl  Multiplier.idl  ThreeDofPath.idl  ThreeDofPointTS.idl
ocs2_sqp/blasfeo_catkin/: CMakeLists.txt  package.xml
ocs2_sqp/hpipm_catkin/: CMakeLists.txt  package.xml
ocs2_sqp/ocs2_sqp/: CMakeLists.txt  package.xml
ocs2_test_tools/ocs2_qp_solver/: CMakeLists.txt  package.xml
ocs2_thirdparty/: CMakeLists.txt  package.xml
(+46 files in other folders)
