<?xml version="1.0"?>
<package format="3">
  <name>ocs2_ballbot_ros</name>
  <version>0.0.0</version>
  <description>The ocs2_ballbot_ros package</description>

  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="jcarius@ethz.ch">Jan Carius</maintainer>
  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>robot_state_publisher</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>ocs2_core</depend>
  <depend>ocs2_ros2_msgs</depend>
  <depend>ocs2_oc</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_sqp</depend>
  <depend>ocs2_slp</depend>
  <depend>ocs2_ros2_interfaces</depend>
  <depend>ocs2_ballbot</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_robotic_assets</depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
