<?xml version="1.0"?>
<package format="3">
  <name>ocs2_double_integrator_ros</name>
  <version>0.0.0</version>
  <description>The ocs2_double_integrator_ros package</description>

  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="jcarius@ethz.ch">Jan Carius</maintainer>
  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build and build tool dependencies -->
  <build_depend>ament_cmake_ros</build_depend>
  <build_depend>ament_cmake_python</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>cmake_clang_tools</build_depend>

  <!-- Dependencies on other ROS2 packages -->
  <depend>rclcpp</depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_sqp</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_ros2_interfaces</depend>
  <depend>ocs2_double_integrator</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_robotic_assets</depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
